# M-GPR-data-collection

./: .gitignore  CLI_GUIDE.md  README.md  clean.py  collect.py  db.py  filters.json  pyproject.toml  ui.py
marketgpr/: cli.py  db.py
marketgpr/commands/: clean.py  collect.py  enrich.py  info.py
